@@ -3261,7 +3261,7 @@ Builtin Apps:
 
 <p>
   <b>Built-In Application Utility Functions</b>.
-  The utility functions exported by the builtin application logic are prototyped in <code>apps/include/apps.h</code>.
+  The utility functions exported by the builtin application logic are prototyped in <code>nuttx/include/nuttx/binfmt/builtin.h</code> and <code>apps/include/builtin.h</code>.
   These utility functions include:
 </p>
 
