@@ -3957,3 +3957,8 @@
 	* configs/ubw32/ostest: Enable the vfork() test.
 	* fs/binfs:  Move apps/builtin/binfs.c to fs/binfs/fs_binfs.c
 	  CONFIG_APPS_BINDIR rename CONFIG_FS_BINFS
+	* include/nuttx/binfmt/builtin.h:  Some of the content of
+	  apps/include/apps.h moved to include/nuttx/binfmt/builtin.h
+	* binfmt/libbuiltin/libbuiltin_utils.c:  Move utility builtin
+	  utility functions from apps/builtin/exec_builtins.c to
+	  binfmt/libbuiltin/libbuiltin_utils.c
